--- a/src/main/webapp/client/src/app/dashboard/dashboard.html
+++ b/src/main/webapp/client/src/app/dashboard/dashboard.html
@@ -145,7 +145,7 @@
 
 
                         <div class="imageHover imageHoverFlip">
-                            <a href="#"><img ng-src="{{product.images}}" alt="img"
+                            <a href="#{{product.productName}}"><img ng-src="{{product.images}}" alt="img"
                                                                 class="img-responsive primaryImage">
                                 <img ng-src="{{product.images}}" alt="img" class="img-responsive secondaryImage"></a>
 
@@ -154,7 +154,7 @@
 
 
                         <div class="description">
-                            <h4><a href="product-details.html">{{product.productName}}</a></h4>
+                            <h4><a href="product-details.html">{{product.productLabel}}</a></h4>
                          </div>
                         <div class="price"><span>Rs.{{product.price}}</span></div>
                         <div class="action-control"><a class="btn btn-primary"> <span class="add2cart"><i
