--- a/src/main/webapp/client/src/app/subcategories/sub_category.html
+++ b/src/main/webapp/client/src/app/subcategories/sub_category.html
@@ -5,8 +5,9 @@
     <div class="row">
         <div class="breadcrumbDiv col-lg-12">
             <ul class="breadcrumb">
-                <li><a href="#">Home</a></li>
-                <li class="active">{{vm.categoryName | uppercase}}</li>
+                <li><a ng-href="#">Home</a></li>
+                <li><a ng-href="#/{{vm.categoryName}}">{{vm.categoryName | uppercase}}</a></li>
+                <li class="active">{{vm.subcategoryName | uppercase}}</li>
             </ul>
         </div>
     </div>
@@ -21,18 +22,26 @@
                 <!--Category-->
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4 class="panel-title"><a data-toggle="collapse" data-target="#collapseCategory"
-                                                   class="collapseWill active ">
-                            <span class="pull-left"> <i class="fa fa-caret-right"></i></span> Category </a></h4>
+                        <h4 class="panel-title">
+                            <a data-target="#collapseCategory" data-toggle="collapse" class="collapseWill active ">
+                                <span class="pull-left"> <i class="fa fa-caret-right"></i></span> Category
+                            </a>
+                        </h4>
                     </div>
+
                     <div id="collapseCategory" class="panel-collapse collapse in" ng-controller = "MenuController as menu">
                         <div class="panel-body">
                             <ul class="nav nav-pills nav-stacked tree" ng-repeat = "categories in categoriesArray">
                                 <li class="active dropdown-tree open-tree"><a class="dropdown-tree-a" ng-href="#/{{categories.categoryName}}"> <span
-                                        class="badge pull-right">42</span>{{categories.categoryLabel}}</a>
-                                    <ul class="category-level-2 dropdown-menu-tree">
-                                        <li class="dropdown-tree" ng-repeat="subCat in categories.listofsubcategories">
-                                        <a class="dropdown-tree-a" ng-href="#/{{categories.categoryName}}/{{subCat.subcategoryName}}">{{subCat.subcategoryLabel}}</a>
+                                        class="badge pull-right"></span> {{categories.categoryLabel}} </a>
+                                    <ul class="category-level-2 dropdown-menu-tree" ng-repeat="subCat in categories.listofsubcategories">
+                                        <li class="dropdown-tree open-tree"><a class="dropdown-tree-a" ng-href="#/{{categories.categoryName}}/{{subCat.subcategoryName}}">
+                                            {{subCat.subcategoryLabel}}</a>
+                                            <ul class="category-level-2 dropdown-menu-tree">
+                                                <li><a href="">First Year</a></li>
+                                                <li><a href="">Second Year</a></li>
+                                                <li><a href="">Third Year</a></li>
+                                            </ul>
                                         </li>
                                     </ul>
                                 </li>
@@ -117,11 +126,11 @@
                                 <label>
                                     <input type="checkbox" name="tour" value="2"/>
                                     LU </label>
-                            </div>
+                            </div>                            
                             <div class="block-element">
-                                <label> &nbsp; </label>
-                                <!-- keep it blank // -->
+                                <label> &nbsp; </label> <!-- keep it blank // -->
                             </div>
+
                         </div>
                     </div>
                 </div>
@@ -185,26 +194,20 @@
             </div>
         </div>
 
+
         <!--right column-->
         <div class="col-lg-9 col-md-9 col-sm-12">
-            <div class="w100 clearfix category-top">
-                <h2> {{vm.categoryName | uppercase}} </h2>
 
-                <div class="categoryImage"><img src="client/src/images/category/category.jpg" class="img-responsive" alt="img"></div>
+            <div class="w100 clearfix category-top">
+                <h2> {{vm.subcategoryName | uppercase}} </h2>
+
+                <div class="categoryImage"><img src="client/src/images/category/sub_category.jpg" class="img-responsive" alt="img">
+                </div>
             </div>
             <!--/.category-top-->
 
-            <div class="row subCategoryList clearfix" ng-controller = "MenuController as menu">
-                <div class="col-lg-2 col-md-2 col-sm-3 col-xs-4  text-center " ng-repeat = "categories in categoriesArray">
-                    <div class="thumbnail equalheight"><a class="subCategoryThumb" href="sub-category.html"><img
-                            src="client/src/images/category/engineering_category.jpg" class="img-rounded" alt="img"> </a> <a class="subCategoryTitle"><span>{{categories.categoryLabel}}</span></a>
-                    </div>
-                </div>
-            </div>
-            <!--/.subCategoryList-->
-
             <div class="w100 productFilter clearfix">
-                <p class="pull-left"> Showing <strong>{{vm.products.length}}</strong> products </p>
+                <p class="pull-left"> Showing <strong>12</strong> products </p>
 
                 <div class="pull-right ">
                     <div class="change-order pull-right">
@@ -217,13 +220,14 @@
                             <option value="price-desc">Sort by price: high to low</option>
                         </select>
                     </div>
-                    <div class="change-view pull-right"><a href="#" title="Grid" class="grid-view"> <i
-                            class="fa fa-th-large"></i> </a> <a href="#" title="List" class="list-view "><i
-                            class="fa fa-th-list"></i></a></div>
+                    <div class="change-view pull-right">
+                        <a href="#" title="Grid" class="grid-view"> <i class="fa fa-th-large"></i> </a>
+                        <a href="#" title="List" class="list-view "><i class="fa fa-th-list"></i></a></div>
                 </div>
             </div>
             <!--/.productFilter-->
-            <div class="row  categoryProduct xsResponse clearfix">
+
+			<div class="row  categoryProduct xsResponse clearfix">
                 <div class="item col-sm-4 col-lg-4 col-md-4 col-xs-6" ng-repeat="product in vm.products">
                     <div class="product">
                         <a class="add-fav tooltipHere" data-toggle="tooltip" data-original-title="Add to Wishlist"
@@ -274,21 +278,23 @@
                         <li><a href="#">»</a></li>
                     </ul>
                 </div>
-                <div class="pull-right pull-right col-sm-4 col-xs-12 no-padding text-right text-left-xs">
+                <div class="pull-right pull-right  col-sm-4 col-xs-12 no-padding text-right text-left-xs">
                     <p>Showing 1–450 of 12 results</p>
                 </div>
             </div>
-            <!--/.categoryFooter-->
         </div>
-        <!--/right column end-->
+        <!--/.categoryFooter-->
     </div>
-    <!-- /.row  -->
+    <!--/right column end-->
+</div>
+<!-- /.row  -->
 </div>
 <!-- /main container -->
 
 <div class="gap"></div>
 
 <!-- Product Details Modal  -->
+<!-- Modal -->
 <div class="modal fade" id="productSetailsModalAjax" tabindex="-1" role="dialog"
      aria-labelledby="productSetailsModalAjaxLabel" aria-hidden="true">
     <div class="modal-dialog">
@@ -299,3 +305,4 @@
     <!-- /.modal-dialog -->
 </div>
 <!-- /.modal -->
+<!-- End Modal -->
