--- a/src/main/webapp/client/src/app/dashboard/dashboard.html
+++ b/src/main/webapp/client/src/app/dashboard/dashboard.html
@@ -133,7 +133,7 @@
 
         <h3 class="section-title style2 text-center"><span>NEW FEATURES</span></h3>
 
-        <div class="container">
+        <div class="container" ng-controller="cartController">
             <div class="row xsResponse categoryProduct">
 
                 <div class="item itemauto  col-lg-3 col-md-3 col-sm-6 col-xs-6" ng-repeat = "product in vm.products">
@@ -154,10 +154,10 @@
 
 
                         <div class="description">
-                            <h4><a href="product-details.html">{{product.productLabel}}</a></h4>
+                            <h4><a ng-href="#/product/{{product.productName}}">{{product.productLabel}}</a></h4>
                          </div>
                         <div class="price"><span>&#8377;{{product.price}}</span></div>
-                        <div class="action-control"><a class="btn btn-primary"> <span class="add2cart"><i
+                        <div class="action-control"><a class="btn btn-primary" ng-click="addToCart(product)"> <span class="add2cart"><i
                                 class="glyphicon glyphicon-shopping-cart"> </i> Add to cart </span> </a></div>
                     </div>
                 </div>
