--- a/src/main/webapp/client/src/app/categories/category.html
+++ b/src/main/webapp/client/src/app/categories/category.html
@@ -237,11 +237,11 @@
                                    data-target="#productSetailsModalAjax">Quick View </a>
 
                             </div>
-                            <a href="#/product/{{product.productName}}"><img ng-src="{{product.images}}" alt="img"
+                            <a href="#/product/{{product.productName}}"><img ng-src="{{product.productImages[0].imageUrl}}" alt="img"
                                                                 class="img-responsive"></a>
 
                             <div class="promotion"><span class="new-product"> NEW</span> <span
-                                    class="discount">15% OFF</span></div>
+                                    class="discount">{{product.usedBookDiscount}} OFF</span></div>
                         </div>
                         <div class="description">
                             <h4><a href="product-details.html">{{product.productLabel}}</a></h4>
@@ -253,7 +253,7 @@
                                 <p> </p>
                             </div>
                             <span class="size"> </span></div>
-                        <div class="price"><span>&#8377;{{product.price}}</span></div>
+                        <div class="price"><span>&#8377;{{product.usedBookSellingPrice}}</span></div>
                         <div class="action-control"><a class="btn btn-primary"> <span class="add2cart"><i
                                 class="glyphicon glyphicon-shopping-cart"> </i> Add to cart </span> </a></div>
                     </div>
