--- a/src/main/webapp/client/src/app/dashboard/dashboard.html
+++ b/src/main/webapp/client/src/app/dashboard/dashboard.html
@@ -145,18 +145,18 @@
 
 
                         <div class="imageHover imageHoverFlip">
-                            <a href="#/product/{{product.productName}}"><img ng-src="{{product.images}}" alt="img"
+                            <a href="#/product/{{product.productName}}"><img ng-src="{{product.productImages[0].imageUrl}}" alt="img"
                                                                 class="img-responsive primaryImage">
-                                <img ng-src="{{product.images}}" alt="img" class="img-responsive secondaryImage"></a>
+                                <img ng-src="{{product.productImages[0].imageUrl}}" alt="img" class="img-responsive secondaryImage"></a>
 
-                            <div class="promotion"><span class="discount">15% OFF</span></div>
+                            <div class="promotion"><span class="discount">{{product.usedBookDiscount}} OFF</span></div>
                         </div>
 
 
                         <div class="description">
                             <h4><a ng-href="#/product/{{product.productName}}">{{product.productLabel}}</a></h4>
                          </div>
-                        <div class="price"><span>&#8377;{{product.price}}</span></div>
+                        <div class="price"><span>&#8377;{{product.usedBookSellingPrice}}</span></div>
                         <div class="action-control"><a class="btn btn-primary" ng-click="addToCart(product)"> <span class="add2cart"><i
                                 class="glyphicon glyphicon-shopping-cart"> </i> Add to cart </span> </a></div>
                     </div>
