--- a/src/main/webapp/client/src/app/cart/one-page-checkout.html
+++ b/src/main/webapp/client/src/app/cart/one-page-checkout.html
@@ -323,10 +323,10 @@
                                                             <p>A code will be sent to the following email address:</p>
 
                                                                 <div class="form-group">
-							                                        <label for="InputEmail">Email </label>
-							                                        <input type="text" class="form-control" id="InputEmail" placeholder="Email" ng-model="vm.cod_email">
+							                                        <label for="InputMobile">Mobile No: </label>
+							                                        <input type="text" class="form-control" id="InputMobile" placeholder="Mobile" ng-model="vm.cod_mobile">
 							                                    </div>
-							                                    <a ng-click="vm.sendCodetoEmail()"
+							                                    <a ng-click="vm.sendCodetoMobile()"
                                                                               class="btn btn-primary btn-lg ">
 		                                                        Send Code <i class="fa fa-arrow-circle-right"></i> </a>
 		                                                        <div class="form-group">
